--- a/cf/i18n/resources/de-de.all.json
+++ b/cf/i18n/resources/de-de.all.json
@@ -2060,12 +2060,12 @@
     "translation": "Abrufen von Bereichen ist fehlgeschlagen.\n{{.ErrorDescription}}"
   },
   {
-    "id": "Failed to create json for resource_match request",
-    "translation": "Erstellen von JSON für die Anforderung resource_match ist fehlgeschlagen."
+    "id": "Failed to create a local temporary zip file for the buildpack",
+    "translation": ""
   },
   {
-    "id": "Failed to create local buildpack",
-    "translation": ""
+    "id": "Failed to create json for resource_match request",
+    "translation": "Erstellen von JSON für die Anforderung resource_match ist fehlgeschlagen."
   },
   {
     "id": "Failed to create manifest, unable to parse environment variable: ",
