--- a/cf/i18n/resources/en-us.all.json
+++ b/cf/i18n/resources/en-us.all.json
@@ -2060,12 +2060,12 @@
     "translation": "Failed fetching spaces.\n{{.ErrorDescription}}"
   },
   {
-    "id": "Failed to create json for resource_match request",
-    "translation": "Failed to create json for resource_match request"
+    "id": "Failed to create a local temporary zip file for the buildpack",
+    "translation": "Failed to create a local temporary zip file for the buildpack"
   },
   {
-    "id": "Failed to create local buildpack",
-    "translation": "Failed to create local buildpack"
+    "id": "Failed to create json for resource_match request",
+    "translation": "Failed to create json for resource_match request"
   },
   {
     "id": "Failed to create manifest, unable to parse environment variable: ",
