--- a/cf/i18n/resources/fr-fr.all.json
+++ b/cf/i18n/resources/fr-fr.all.json
@@ -2060,12 +2060,12 @@
     "translation": "Echec de l'extraction des espaces.\n{{.ErrorDescription}}"
   },
   {
-    "id": "Failed to create json for resource_match request",
-    "translation": "Echec de la création du json pour la demande resource_match"
+    "id": "Failed to create a local temporary zip file for the buildpack",
+    "translation": ""
   },
   {
-    "id": "Failed to create local buildpack",
-    "translation": ""
+    "id": "Failed to create json for resource_match request",
+    "translation": "Echec de la création du json pour la demande resource_match"
   },
   {
     "id": "Failed to create manifest, unable to parse environment variable: ",
