--- a/cf/i18n/resources/it-it.all.json
+++ b/cf/i18n/resources/it-it.all.json
@@ -2060,12 +2060,12 @@
     "translation": "Errore durante il recupero degli spazi.\n{{.ErrorDescription}}"
   },
   {
-    "id": "Failed to create json for resource_match request",
-    "translation": "Impossibile creare il json per la richiesta resource_match"
+    "id": "Failed to create a local temporary zip file for the buildpack",
+    "translation": ""
   },
   {
-    "id": "Failed to create local buildpack",
-    "translation": ""
+    "id": "Failed to create json for resource_match request",
+    "translation": "Impossibile creare il json per la richiesta resource_match"
   },
   {
     "id": "Failed to create manifest, unable to parse environment variable: ",
